--- a/gameplan2.css
+++ b/gameplan2.css
@@ -210,12 +210,13 @@ a {
     position: absolute;
     right: 1rem;
     font-size: 1.5rem;
-    overflow: hidden;
+    overflow: auto;
+    scrollbar-color: transparent transparent;
 }
 
 #milestoneList {
     position: relative;
-    overflow: hidden;
+    overflow: auto;
     max-height: 11.5rem;
 }
 
